Introduce StarterUnion and UnionCache to speed up conversion